force-app/main/default/objects/Product2/fields/CaseSafe_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>CaseSafe_Product_ID__c</fullName>
    <formula>CaseSafeID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CaseSafe Product ID</label>
    <type>Text</type>
</CustomField>