force-app/main/default/objects/Product2/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Dancik Cost Center field from Item Listing Workbook</description>
    <label>Cost Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>