force-app/main/default/objects/Product2/fields/Cost_Class__c.field-meta.xml
<CustomField>
    <fullName>Cost_Class__c</fullName>
    <description>Dancik Cost Class Code from Item Listing Workbook</description>
    <label>Cost Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>