force-app/main/default/objects/Product2/fields/Dancik_Item__c.field-meta.xml
<CustomField>
    <fullName>Dancik_Item__c</fullName>
    <externalId>true</externalId>
    <label>Dancik Item #</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>