force-app/main/default/objects/Product2/fields/Item_Class_1__c.field-meta.xml
<CustomField>
    <fullName>Item_Class_1__c</fullName>
    <description>Dancik Item Class 1 field from Item Listing Workbook</description>
    <label>Item Class 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>