force-app/main/default/objects/Product2/fields/Item_Class_2__c.field-meta.xml
<CustomField>
    <fullName>Item_Class_2__c</fullName>
    <description>Dancik Item Class 2 from Item Listing Workbook</description>
    <label>Item Class 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>