force-app/main/default/objects/Product2/fields/Item_Class_3__c.field-meta.xml
<CustomField>
    <fullName>Item_Class_3__c</fullName>
    <description>Dancik Item Class 3 from Item Listing Workbook</description>
    <label>Item Class 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>