force-app/main/default/objects/Product2/fields/Landed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Landed_Cost__c</fullName>
    <description>Dancik Landed Cost field from Cost File</description>
    <label>Landed Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>