force-app/main/default/objects/Product2/fields/Last_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Change_Date__c</fullName>
    <label>Last Change Date</label>
    <type>Date</type>
</CustomField>