force-app/main/default/objects/Product2/fields/Last_Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Changed_By__c</fullName>
    <label>Last Changed By</label>
    <length>6</length>
    <type>Text</type>
</CustomField>