force-app/main/default/objects/Product2/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <description>Dancik Manufacturer field from Item Listing Workbook</description>
    <label>Manufacturer</label>
    <length>6</length>
    <type>Text</type>
</CustomField>