force-app/main/default/objects/Product2/fields/National_Account__c.field-meta.xml
<CustomField>
    <fullName>National_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>