force-app/main/default/objects/Product2/fields/On_Hand_Inv_Cost__c.field-meta.xml
<CustomField>
    <fullName>On_Hand_Inv_Cost__c</fullName>
    <formula>Total_QTY_On_Hand__c *  Landed_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hand Inv Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>