force-app/main/default/objects/Product2/fields/Packaging_Class__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Class__c</fullName>
    <description>Dancik Packaging Class Code from Item Listing Workbook</description>
    <label>Packaging Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>