force-app/main/default/objects/Product2/fields/Pick_UoM__c.field-meta.xml
<CustomField>
    <fullName>Pick_UoM__c</fullName>
    <description>Dancik Pick Unit of Measure from Item Listing Workbook</description>
    <label>Pick UoM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>