force-app/main/default/objects/Product2/fields/Price_Class__c.field-meta.xml
<CustomField>
    <fullName>Price_Class__c</fullName>
    <description>Dancik Price Class Code from Item Listing Workbook</description>
    <label>Price Class</label>
    <length>10</length>
    <type>Text</type>
</CustomField>