force-app/main/default/objects/Product2/fields/Pricing_UoM__c.field-meta.xml
<CustomField>
    <fullName>Pricing_UoM__c</fullName>
    <description>Dancik Pricing Unit of Measure Field from Item Listing Workbook</description>
    <label>Pricing UoM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>