force-app/main/default/objects/Product2/fields/Product_Description_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Description_2__c</fullName>
    <label>Product Description 2</label>
    <type>TextArea</type>
</CustomField>