force-app/main/default/objects/Product2/fields/QTY_Allocated__c.field-meta.xml
<CustomField>
    <fullName>QTY_Allocated__c</fullName>
    <label>QTY Allocated</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>