force-app/main/default/objects/Product2/fields/QTY_Available__c.field-meta.xml
<CustomField>
    <fullName>QTY_Available__c</fullName>
    <label>QTY Available</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>