force-app/main/default/objects/Product2/fields/Sales_2_Year_Totals__c.field-meta.xml
<CustomField>
    <fullName>Sales_2_Year_Totals__c</fullName>
    <label>Sales - 2 Year Totals</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>