force-app/main/default/objects/Product2/fields/Sales_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Sales_Current_Month__c</fullName>
    <label>Sales - Current Month</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>