force-app/main/default/objects/Product2/fields/Sales_Past_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Sales_Past_12_Months__c</fullName>
    <label>Sales Past 12 Months</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>