force-app/main/default/objects/Product2/fields/Sales_UoM__c.field-meta.xml
<CustomField>
    <fullName>Sales_UoM__c</fullName>
    <description>Dancik Sales Unit of Measure from Item Listing Workbook</description>
    <label>Sales UoM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>