force-app/main/default/objects/Product2/fields/Sample_Field__c.field-meta.xml
<CustomField>
    <fullName>Sample_Field__c</fullName>
    <label>Sample Field</label>
    <length>30</length>
    <type>Text</type>
</CustomField>