force-app/main/default/objects/Product2/fields/Suppliers_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Suppliers_Item_Number__c</fullName>
    <label>Suppliers Item Number</label>
    <length>75</length>
    <type>Text</type>
</CustomField>