force-app/main/default/objects/Product2/fields/Suppliers_UoM__c.field-meta.xml
<CustomField>
    <fullName>Suppliers_UoM__c</fullName>
    <description>Dancik Suppliers Unit of Measure field from Item Listing Workbook</description>
    <label>Suppliers UoM</label>
    <length>4</length>
    <type>Text</type>
</CustomField>