force-app/main/default/objects/Product2/fields/Total_QTY_On_Hand__c.field-meta.xml
<CustomField>
    <fullName>Total_QTY_On_Hand__c</fullName>
    <label>Total QTY On Hand</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>