force-app/main/default/objects/Product2/recordTypes/National_Account_Product.recordType-meta.xml
<RecordType>
    <fullName>National_Account_Product</fullName>
    <active>true</active>
    <description>Product record type for National Accounts</description>
    <label>National Account Product</label>
</RecordType>