force-app/main/default/objects/Product2/listViews/KFC_Products.listView-meta.xml
<ListView>
    <fullName>KFC_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Dancik_Item__c</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>Product_Description_2__c</columns>
    <columns>QTY_Available__c</columns>
    <columns>Landed_Cost__c</columns>
    <columns>Sales_2_Year_Totals__c</columns>
    <columns>Sales_Past_12_Months__c</columns>
    <columns>Sales_Previous_12_Months__c</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>National_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.FAMILY</field>
        <operation>equals</operation>
        <value>NKC</value>
    </filters>
    <label>KFC Products</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>